[package]
name = "tonsoe"
version = "0.0.1-pre-dev-1"
description = "A Discord library focused on bot development"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["discord", "bot", "client",  "async", "tonsoe"]
categories = ["asynchronous", "api-bindings"]
repository = "https://github.com/jean1398reborn/tonsoe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.20.1", features =["full"]}
tokio-tungstenite = "0.17.2"
bitflags = "1.3.2"

[[example]]
name = "basic_online"
path = "examples/basic_online.rs"
