[package]
name = "tonsoe"
version = "0.0.1-pre-dev-2"
description = "A Discord library focused on bot development"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["discord", "bot", "client",  "async", "tonsoe"]
categories = ["asynchronous", "api-bindings"]
repository = "https://github.com/jean1398reborn/tonsoe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.20.1", features =["full"]}
tokio-tungstenite = {version="0.17.2", features = ["native-tls"] }
bitflags = "1.3.2"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.62"
futures-util = "0.3.23"
async-trait = "0.1.57"
rand = "0.8.5"

[[example]]
name = "basic_online"
path = "examples/basic_online.rs"
